for-k8s/gerador-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gerador-service
  labels:
    app: gerador-service
spec:
  selector:
    app: gerador-variaveis
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
